--- a/index.html
+++ b/index.html
@@ -89,16 +89,13 @@
           <div class="skill_1 skill_item">
             <h3>html/css/javascript</h3>
             <p>LPページ、Webサイトのコーディング</p>
-            <div class="graph">
+          <!--  <div class="graph">
               <span class="bar"><span class="value">70%</span></span>
-            </div>
+            </div>-->
           </div>
           <div class="skill_2 skill_item">
             <h3>Webデザイン</h3>
             <p>学習中...</p>
-            <div class="graph">
-              <div class="bar"></div>
-            </div>
           </div>
 
         </div>
