--- a/index.html
+++ b/index.html
@@ -107,9 +107,17 @@
         <div class="works_title">
           <h2>Works</h2>
         </div>
-        <div class="works_item">
-          <div class="item1">
-            <h6>iSaraさんのサイト模写</h6>
+        <div class="works_item container">
+          <div class="row">
+            <div class="col-lg-6 col-12">
+              <div class="item1_img">
+                <img src="img/iSara.png" alt="iSaraさんのサイトの模写">
+              </div>
+              <h6>iSaraさんのサイト模写</h6>
+            </div>
+            <div class="col-lg-6 col-12">
+
+            </div>
           </div>
         </div>
 
@@ -125,6 +133,7 @@
               <th>e-mail</th>
               <td>
                 <input id="copyTarget" type="text" value="ohyaatsushiworks@gmail.com" readonly>
+                <br class="brsp_415">
                 <button onclick="copyToClipboard()">Copy e-mail address</button>
               </td>
             </tr>
